src/pages/home.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#homepage{
  overflow: hidden;
}
#section {
  display: flex;
  justify-content: center;
  width: 100%;
  padding: var(--paddingSection);
}

#header {
  height: 100vh;
  max-height: 1000px;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-x: hidden;
}
#aboutMe {
  height: 80vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10%;
  max-width: 1680px;
  max-height: 1000px;
  padding: var(--paddingSection);
}

.aboutMeImg {
  max-width: 40%;
}
.aboutMeContent {
  max-width: 600px;
  height: 450px;
  display: flex;
  flex-direction: column;
  color: var(--text-white);
}
#aboutMeTitle {
  margin: 20px 0px;
}
#projects {
  width: 100%;
  max-width: 1680px;
  padding: var(--paddingSection);
  display: flex;
  flex-direction: column;
  padding-top: 50px;
}
#experience {
  padding: var(--paddingSection);
  width: 100%;
  max-width: 1680px;
  display: flex;
  flex-direction: column;
  padding-top: 50px;
  margin-top: 100px;
  margin-bottom: 100px;
}
#contact {
  padding: var(--paddingSection);
  width: 100%;
  max-width: 1680px;
  display: flex;
  flex-direction: column;
  padding-top: 50px;
  margin-top: 100px;
  margin-bottom: 100px;
  gap: 50px;
}
.contactSectionContent {
  display: flex;
  justify-content: space-between;
}
.detailsContact {
  letter-spacing: 1px;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 30px;
}
.contactTitle {
  font-size: 2.5rem;
  font-weight: 500;
}
.contactSub {
  font-size: 2rem;
  font-weight: 500;
}
.iconsBox {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: 20px;
  grid-row-gap: 20px;
}
.title {
  font-size: 5.4rem;
  font-weight: 600;
  margin-bottom: 100px;
}
.cardsContainer {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
  justify-items: center;
  grid-auto-flow: dense;
  row-gap: 100px;
}
.aboutMeSubtitle {
  font-size: 18px;
  text-shadow: 0px 2px 2px #0000001c;
  font-size: 1.7rem;
  display: flex;
  flex-direction: column;
  gap: 30px;
  letter-spacing: 1px;
  font-weight: 300;
}
.backgroundImg {
  background-image: linear-gradient(to bottom, #01012b00, #01012b 100%),
    url(../assets/background.jpg);
  background-size: cover;
  width: 100%;
  height: 100vh;
  position: absolute;
  z-index: -1;
}

.backgroundImg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
  z-index: 1;
}

.swiper {
  height: 475px;
  width: 350px;
}  

.swiper-slide {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 18px;
  font-size: 22px;
  font-weight: bold;
  color: #fff;
  padding: 10px;
}

.responsiveCards{
  display: none;
}
@media(max-width: 1200px){
  .contactSectionContent{
    flex-direction: column;
    gap: 100px;
  }
}

@media (max-width: 950px) {
  #aboutMe {
    flex-direction: column;
    justify-content: center;
    margin-top: 50px;
    height: fit-content;
  }
  .aboutMeImg {
    max-width: 50%;
  }
  .aboutMeContent {
    text-align: center;
  }
  .title {
    font-size: 5rem;
    text-align: center;
  }
  #header{
    max-height: 900px;
  }

  .cardsContainer{
    display: none;
  }
  .responsiveCards{
    display: flex;
  }  
}

@media (max-width: 650px) {
  .title {
    font-size: 4rem;
  }

  .aboutMeSubtitle {
    font-size: 1.5rem;
    gap: 20px;
  }
  .aboutMeImg{
    min-width: 180px;
  }
}
@media (max-width: 550px) {
.contactSectionContent{
  gap: 50px;
}
}
@media (max-width:500px) {
  .swiper {
    height: 375px;
    width: 250px;
  }
}

@media (max-width: 450px) {
  .title {
    font-size: 3rem;
  }

  .aboutMeSubtitle {
    font-size: 1.3rem;
  }
}

